Update to current Go with modules

--- a/app.conf
+++ b/app.conf
@@ -1,7 +1,7 @@
 {
 
 	service {
-		path = "/v1"
+		path = "/api/v1"
 		
 		cors {
 			allowed-origins = ["*"]
@@ -14,7 +14,7 @@
 		}
 
 		http {
-			address = ":8080"
+			address = "127.0.0.1:9092"
 			enabled = true
 		}
 
