--- a/app.conf
+++ b/app.conf
@@ -25,6 +25,7 @@
 			key     = ""
 		}
 
+
 		templates  {
 			render-html {
 				template = "templates/render_html.tmpl"
@@ -35,6 +36,8 @@
 			}
 		}
 	}
+
+		xyzzy-xyzzy = "this is it"
 
 	pandoc {
 
@@ -48,6 +51,8 @@
 
 		safe-dir = "/app"
 
+		pandoc-path = "/usr/local/bin/pandoc"
+
 		fetchers {
 			http {
 				driver = http
@@ -57,6 +62,13 @@
 			data {
 				driver = data
 				options {}
+			}
+
+			redis {
+				driver = redis
+				options {
+					connect = "127.0.0.1:6379"
+				}
 			}
 		}
 	}
