Config for Redis in place

--- a/app.conf
+++ b/app.conf
@@ -1,5 +1,7 @@
 {
 
+	auth-key = "DBPnbn3Ppzstkivf/gWeAYHDKH0="
+
 	service {
 		path = "/api/v1"
 		
@@ -37,8 +39,6 @@
 		}
 	}
 
-		xyzzy-xyzzy = "this is it"
-
 	pandoc {
 
 		verbose     = false
@@ -54,6 +54,7 @@
 		pandoc-path = "/usr/local/bin/pandoc"
 
 		fetchers {
+
 			http {
 				driver = http
 				options {}
