--- a/app.conf
+++ b/app.conf
@@ -1,7 +1,5 @@
 {
 
-	auth-key = "DBPnbn3Ppzstkivf/gWeAYHDKH0="
-
 	service {
 		path = "/api/v1"
 		
@@ -69,6 +67,7 @@
 				driver = redis
 				options {
 					connect = "127.0.0.1:6379"
+					auth-key = "GO_PANDOC_AUTH_KEY"
 				}
 			}
 		}
